# walc-model

./: Cargo.toml  README.md  bytecode_format.md
src/: bytecode_interpreter.rs  lib.rs
src/ast/: ast.rs  bytecode_generator.rs  token.rs  treewalk_interpreter.rs
src/bytecode/: bytecode_generator.rs  bytecode_interpreter.rs  opcode.rs  stackframe.rs
src/frontend/: lexer.rs  parser.rs
src/interp/: bytecode_interpreter.rs  treewalk_interpreter.rs
src/vm/: interpreter.rs  runtime_state.rs  scope_binding.rs  stack.rs
