[package]
name = "walc_model"
version = "0.1.0"
edition = "2021"
description = "Model for toy tree-traversal calculator"
license = "MIT"
repository = "https://github.com/Willmo3/walc-model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
