[package]
name = "walc_model"
version = "0.5.1"
edition = "2021"
description = "Interpreter for Walc programming language."
license = "MIT"
repository = "https://github.com/Willmo3/walc-model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
